added jquery link

--- a/demo/_attachments/index.html
+++ b/demo/_attachments/index.html
@@ -18,6 +18,7 @@
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="leaflet.draw.ie.css" />
 <![endif]-->
+<script type="text/javascript" src="/_utils/script/jquery.js"></script>
     <script type="text/javascript" src="leaflet.js"></script>
     <script type="text/javascript" src="leaflet.draw.js"></script>
     <script type="text/javascript" src="leaflet.hash.js"></script>
